# ebwt2snp

./: CMakeLists.txt  README.md  build_index.cpp  clust2snp.cpp  compareVCF.cpp  differentialVCF.cpp  eBWTclust.cpp  ebwt2clust.cpp  include.hpp  merge_bwt.cpp  pipeline.sh  pipeline_samtools0.1.sh  read64_t.hpp  sam2vcf.cpp  snp2fasta.cpp  snp2fastq.cpp  snp_vs_vcf.cpp  validate.cpp
internal/: DNA_string.hpp  bwt.hpp  bwt_merger.hpp  delta.hpp  delta_file.hpp  dna_bwt.hpp  dna_string.hpp  huff_string.hpp  rlbwt.hpp  rle_string.hpp  sparse_sd_vector.hpp  succinct_bit_vector.hpp  utils.hpp  wt_bwt.hpp
